--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,11 @@ warp = {version="0.3"}
 bytes = "1.6.0"
 bincode = "1.0"
 serde_json = "1.0"
+tokio-postgres = { version = "0.7.10", optional = true }
+reqwest = { version = "0.12.5", optional = true, features = ["json"] }
+
+[features]
+sdk = ["reqwest"]
+storage = ["tokio-postgres"]
+memory = []
+default = ["storage", "memory", "sdk"]
